--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "fluent-ffmpeg": "^2.1.2",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   },
